--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -22,7 +22,7 @@ services:
             - redis
             - selenium
     mysql:
-        image: 'mysql:8.0'
+        image: 'mariadb'
         ports:
             - '${FORWARD_DB_PORT:-3306}:3306'
         environment:
@@ -37,6 +37,8 @@ services:
             - sail
         healthcheck:
           test: ["CMD", "mysqladmin", "ping", "-p${DB_PASSWORD}"]
+          retries: 3
+          timeout: 5s
     redis:
         image: 'redis:alpine'
         ports:
@@ -47,14 +49,16 @@ services:
             - sail
         healthcheck:
           test: ["CMD", "redis-cli", "ping"]
-    meilisearch:
-        image: 'getmeili/meilisearch:latest'
-        ports:
-            - '${FORWARD_MEILISEARCH_PORT:-7700}:7700'
-        volumes:
-            - 'sailmeilisearch:/data.ms'
-        networks:
-            - sail
+          retries: 3
+          timeout: 5s
+#    meilisearch:
+#        image: 'getmeili/meilisearch:latest'
+#        ports:
+#            - '${FORWARD_MEILISEARCH_PORT:-7700}:7700'
+#        volumes:
+#            - 'sailmeilisearch:/data.ms'
+#        networks:
+#            - sail
     mailhog:
         image: 'mailhog/mailhog:latest'
         ports:
